--- a/package.json
+++ b/package.json
@@ -33,20 +33,21 @@
   "dependencies": {
     "animejs": "^3.1.0",
     "babel-plugin-styled-components": "^1.12.0",
-    "gatsby": "^5.9.0",
+    "gatsby": "^5.3.3",
+    "gatsby-core-utils": "^4.9.0",
     "gatsby-plugin-google-analytics": "^5.9.0",
     "gatsby-plugin-image": "^3.9.0",
     "gatsby-plugin-manifest": "^5.9.0",
-    "gatsby-plugin-netlify": "^3.4.0",
-    "gatsby-plugin-offline": "^4.4.0",
-    "gatsby-plugin-react-helmet": "^4.4.0",
+    "gatsby-plugin-netlify": "^5.1.0",
+    "gatsby-plugin-offline": "^6.9.0",
+    "gatsby-plugin-react-helmet": "^6.9.0",
     "gatsby-plugin-robots-txt": "^1.5.6",
     "gatsby-plugin-sharp": "^5.9.0",
-    "gatsby-plugin-sitemap": "^4.0.0",
-    "gatsby-plugin-styled-components": "^4.4.0",
+    "gatsby-plugin-sitemap": "^6.9.0",
+    "gatsby-plugin-styled-components": "^6.9.0",
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-images": "^7.9.0",
-    "gatsby-remark-prismjs": "^5.1.0",
+    "gatsby-remark-prismjs": "^7.9.0",
     "gatsby-source-filesystem": "^5.9.0",
     "gatsby-transformer-remark": "^6.9.0",
     "gatsby-transformer-sharp": "^5.9.0",
